Sat Jun 12 10:02:26 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_syscall): should check argument string taint before
	  invoking system calls.

Thu Jun 10 14:45:28 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/dl/dl.c (rb_dl_strdup): strdup() only allocates a buffer of
	  strlen()+1 bytes. [Bug #2794]

Tue Jun  8 18:32:47 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* configure.in (USE_WINSOCK2): ws2tcpip.h needs listed here.

Mon Jun  7 18:18:03 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h: include errno.h before defining errnos.

	* include/ruby/win32.h: check definition existance before defining
	  errno macros.

	* win32/win32.c (errmap): define winsock errors mappings.
	  these are VC++10 support, merge from trunk (r27236, r27258).

Mon Jun  7 12:27:29 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regexp.c (re_compile_pattern): allow zero times match for
	  non-greedy range repeatation. [ruby-core:30613]

Sat Jun  5 13:31:15 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Matrix library copied from 1.9. It is now identical
	  except for methods dealing with Complex numbers which are absent.
	  [ruby-core:26268]

Thu Jun  3 18:14:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in: should replace COMMON_HEADERS if --with-winsock2 is
	  specified.  [ruby-dev:41521]

Thu Jun  3 01:22:45 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fix typo and race condition.

Mon May 31 23:44:22 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: use tclConfig.sh/tkConfig.sh when frameworks
	  are enabled on MacOS X.

	* ext/tk/stubs.c: dirty hack for frameworks and stubs on MacOS X.

	* ext/tk/lib/tk.rb: stop creating a dummy Tcl/Tk interpreter. 
	  And hide a root window before starting eventloop. (for ruby 1.9)

	* ext/tk/tcltklib.c: add codes to support Ruby/Tk-Kit (Rubykit).

Fri May 28 17:34:48 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>