@@ -141,7 +141,7 @@ module DRbCore
 
   def test_03
     assert_equal(8, @there.sum(1, 1, 1, 1, 1, 1, 1, 1))
-    assert_raises(ArgumentError) do
+    assert_raises(DRb::DRbConnError) do
       @there.sum(1, 1, 1, 1, 1, 1, 1, 1, 1)
     end
     assert_raises(DRb::DRbConnError) do
